# concept

./: CMakeLists.txt
include/echo/: concept.h  concept2.h
include/echo/concept/: allocator.h  allocator_traits.h  concept.h  fundamental.h  iterator.h  iterator_category.h  iterator_traits.h  overload.h  query_type.h  range.h  range_traits.h  utility.h
unittest/: allocator_test.cpp  choice_test.cpp  concept_test.cpp  fundamental_test.cpp  iterator_test.cpp  query_type_test.cpp  range_test.cpp
